Revert "fix: Make the alignment of hero title left when in big screen, and center when in small screen"
This reverts commit d3a7108048ed3da759d07e5ba67675a71781dc5f.

--- a/src/styles/components/home/Hero.module.css
+++ b/src/styles/components/home/Hero.module.css
@@ -26,7 +26,7 @@
 }
 
 .title {
-  display: block;
+  display: flex;
   flex-direction: column;
   margin-left: 2.4rem;
   margin-right: 1rem;
@@ -35,11 +35,9 @@
   text-transform: uppercase;
   color: hsl(var(--body) / 0.8);
   font-weight: 800;
-  font-size: clamp(44px, 5vw, 86px);
+  font-size: clamp(40.66px, 5vw, 5rem);
   line-height: 54.5px;
-  letter-spacing: -1.21px;
-  text-align: center;
-  width: min(500px, 70%);
+  letter-spacing: 1.21px;
 }
 
 .title span:nth-child(2) {
@@ -66,7 +64,7 @@
   border: none;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 768px) {
   .hero-content {
     align-items: start;
     transform: translateY(-20%);
@@ -75,7 +73,6 @@
   .title {
     margin: 0;
     line-height: 60px;
-    text-align: left;
   }
 
   .title span:nth-child(2) {
@@ -85,12 +82,12 @@
 
 @media (min-width: 1024px) {
   .title {
-    line-height: 1.3;
+    line-height: 73.5px;
   }
 }
 
 @media (min-width: 1280px) {
   .title {
-    line-height: 1.2;
+    line-height: 83.5px;
   }
 }
